BUGFIX: The New project form just show after two clicks. ToggleVisibility condition refactored.

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@
         }
 
         .close:hover {
-        color: #f44336 !important;
-        font-weight: bolder;
-}
+            color: #f44336 !important;
+            font-weight: bolder;
+        }
+
+        #novo_formulario {
+            display: none;
+        }
